@@ -1,5 +1,5 @@
 [tox]
-envlist = py26, py27, pypy, py33, py34, py35
+envlist = py{26,27,py,33,34,35}-normal, py{26,27,33,34,35}-uwsgi
 
 [testenv]
 passenv = LANG
@@ -12,6 +12,7 @@ deps=
     redis
     requests
     watchdog
+    uwsgi: uwsgi
 
 # Python 2
     py26: python-memcached
@@ -26,6 +27,8 @@ deps=
 whitelist_externals=
     redis-server
     memcached
+    uwsgi
 
 commands=
-    py.test []
+    normal: py.test []
+    uwsgi: uwsgi --pyrun {envbindir}/py.test --pyargv -kUWSGI --cache2=name=werkzeugtest,items=20 --master
